--- a/OnlineShop/Views/Main/BookList.cshtml
+++ b/OnlineShop/Views/Main/BookList.cshtml
@@ -21,7 +21,7 @@
                             <img class="card-img-top mx-auto" src="~/Content/Photo/Book.png" alt="Card image" />
                             <hr class="mb-0" />
                             <div class="card-body">
-                                <h4 class="card-title"><a href="#">@item.Name</a></h4>
+                                <h4 class="card-title"><a href="##">@item.Name</a></h4>
                                 <p class="card-text font-weight-bold price">Price: @item.Price.ToString("c")</p>
                             </div>
                             <div class="card-footer text-center">
