Remake to codeFirst approach, fix bugs

--- a/OnlineShop/Views/Cart/Checkout.cshtml
+++ b/OnlineShop/Views/Cart/Checkout.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineShop.Models.OrderDetailsViewModel
+﻿@model OnlineShop.ViewModels.OrderDetailsViewModel
 
 @{
     ViewBag.Title = "Checkout";
