--- a/OnlineShop/Views/Main/BookList.cshtml
+++ b/OnlineShop/Views/Main/BookList.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineShop.Models.BooksListViewModel
+﻿@model OnlineShop.ViewModels.BooksListViewModel
 
 @{
     ViewBag.Title = "Main";
@@ -22,6 +22,7 @@
                             <hr class="mb-0" />
                             <div class="card-body">
                                 <h4 class="card-title"><a href="##">@item.Name</a></h4>
+                                <p class="card-body">@item.Description</p>
                                 <p class="card-text font-weight-bold price">Price: @item.Price.ToString("c")</p>
                             </div>
                             <div class="card-footer text-center">
