--- a/OnlineShop/Views/Menu/FilterMenu.cshtml
+++ b/OnlineShop/Views/Menu/FilterMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineShop.Models.MenuFilterViewModel
+﻿@model OnlineShop.ViewModels.MenuFilterViewModel
 
 @using (Html.BeginForm("BookListFilter", "Main", FormMethod.Get, new { @class = "mt-4" }))
 {
