--- a/OnlineShop/Views/Menu/MenuItems.cshtml
+++ b/OnlineShop/Views/Menu/MenuItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineShop.Models.MenuGenreViewModel
+﻿@model OnlineShop.ViewModels.MenuGenreViewModel
 
 <a class="btn btn-lg btn-primary mb-2 menu-button" href="~/Main/BookList">Books</a>
 <div class="dropdown">
